# waiverdb

./: .coveragerc  .gitignore  .gitleaks.toml  .readthedocs.yaml  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  get-version.sh  pyproject.toml  renovate.json  requirements.in  requirements.txt  rpmbuild.sh  setup.py  tag-release.sh  test-requirements.txt  tox.ini  version.sh  waiverdb.spec
.github/: run-functional-tests.sh
.github/workflows/: gating.yaml
.tekton/: waiverdb-pull-request.yaml  waiverdb-push.yaml
.tekton/tasks/: functional-tests.yaml
conf/: client.conf.example  client_secrets.json  fedora-messaging-example.toml  settings.py.example
docker/: client_secrets.json  dev-command.sh  dev.env  docker-entrypoint.sh  healthcheck.sh  settings.py
docker/keycloak/: realm-export.json
docs/: Makefile  admin-guide.rst  api.rst  client-conf.rst  conf.py  developer-guide.rst  greenwave-intersphinx.inv  index.rst  release-notes.rst  requirements.txt  user-guide.rst  waiverdb-cli.rst  waiverdb.rst
functional-tests/: conftest.py  test_new_waiver.py  test_new_waiver_form.py  test_oidc_groups.py  test_oidc_login.py
openshift/: README.md  waiverdb-container-template.yaml  waiverdb-container-template.yml  waiverdb-dev-pipeline-template.yml  waiverdb-test-template.yaml
openshift/containers/jenkins-slave/: Dockerfile  entrypoint.sh  jenkins-agent
openshift/containers/waiverdb/: Dockerfile
openshift/docs/: build-waiverdb-container.md  deploy-waiverdb-container.md  pipeline-build-and-test-branch.md  pipeline-build-and-test-pr.md  pipeline-deploy-to-dev.md  pipeline-deployment.md  pipeline-fix-broken-build.md  pipeline-promote-to-stage-or-prod.md  pipeline-test-image.md
openshift/pipelines/: Makefile  c3i-role-vars.yml  deploy.yml
openshift/pipelines/jobs/: waiverdb-dev-integration-test.env  waiverdb-dev-integration-test.tmpl  waiverdb-dev.env  waiverdb-dev.tmpl  waiverdb-greenwave-promote-to-prod.env  waiverdb-greenwave-promote-to-prod.tmpl  waiverdb-greenwave-promote-to-stage.env  waiverdb-integration-test.env  waiverdb-polling-for-master.env  waiverdb-polling-for-master.tmpl  waiverdb-polling-for-prs.env  waiverdb-postmerge.env  waiverdb-postmerge.tmpl  waiverdb-premerge.env  waiverdb-prod-integration-test.env  waiverdb-prod-integration-test.tmpl  waiverdb-promoting-to-prod.env  waiverdb-promoting-to-stage.env  waiverdb-promoting-to-stage.tmpl  waiverdb-repotracker-trigger.env  waiverdb-repotracker-trigger.tmpl  waiverdb-stage-integration-test.env  waiverdb-trigger-on-latest-tag.env  waiverdb-trigger-on-stage-tag.env
openshift/pipelines/snippets/: build-agent.groovy  waiverdb-build-and-test.groovy  waiverdb-full-integration-test.groovy
openshift/pipelines/templates/: waiverdb-build-template.yaml  waiverdb-build.Jenkinsfile  waiverdb-dev-template.yaml  waiverdb-dev.Jenkinsfile  waiverdb-full-integration-test-template.yaml  waiverdb-full-integration-test.Jenkinsfile  waiverdb-greenwave-trigger.Jenkinsfile  waiverdb-greenwave-trigger.yaml  waiverdb-image-promotion-template.yaml  waiverdb-image-promotion.Jenkinsfile  waiverdb-integration-test-template.yaml  waiverdb-integration-test.Jenkinsfile  waiverdb-polling-pagure.Jenkinsfile  waiverdb-polling-pagure.yaml  waiverdb-repotracker-trigger.Jenkinsfile  waiverdb-repotracker-trigger.yaml
openshift/pipelines/templates/snippets/: c3i-library-parameters.yaml  c3i-library.groovy  default-agent.groovy  waiverdb-full-integration-test.groovy  waiverdb-integration-test.groovy
tests/: client_secrets.json  conftest.py  test_access_control.py  test_api_v10.py  test_app.py  test_auth.py  test_authorization.py  test_cli.py  test_events.py  test_messaging_kafka.py  test_migrations.py  test_models.py  test_monitor.py  utils.py
waiverdb/: __init__.py  api_v1.py  app.py  auth.py  authorization.py  cli.py  config.py  events.py  fields.py  logger.py  manage.py  monitor.py  tracing.py  utils.py
waiverdb-messages/: README.md  setup.cfg  tox.ini
waiverdb-messages/waiverdb_messages/: __init__.py  base.py  waiverdb_message.py
waiverdb-messages/waiverdb_messages/tests/: test_common.py  test_waiverdb_message.py  utils.py
waiverdb/messaging/: fedmsg.py  kafka.py  publishers.py  stomp.py
waiverdb/migrations/: env.py
waiverdb/migrations/versions/: 3868a8118458_add_scenario_field_to_the_database.py  71b84ccc31bb_migrate_records_from_old_format_to_new.py  a571375b65f8_remove_result_id_and_subject.py  ce8a1351ecdc_change_subject_to_json.py  f6bc296ba966_subject_dict_to_type_identifier.py
waiverdb/models/: base.py  requests.py  waivers.py
waiverdb/static/: favicon.png~
waiverdb/templates/: layout.html  new_waiver.html  new_waiver.js  permissions.html
