[project]
name = "waiverdb"
description = "An engine for storing waivers against test results"
authors = [
    {name = "Red Hat, Inc. and others"}
]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/release-engineering/waiverdb"
homepage = "https://waiverdb.readthedocs.io/"

include = [
    "COPYING",
    "README.md",
    "conf/*",
    "conf/client.conf.example",
    "conf/client_secrets.json",
    "conf/fedora-messaging-example.toml",
    "conf/settings.py.example",
    "conftest.py",
    "docs/*",
    "fedmsg.d/*.py",
    "pytest.ini",
    "run-dev-server.py",
    "tests/*.py",
    "tests/client_secrets.json",
    "tox.ini",
    "waiverdb/migrations/*.ini",
    "waiverdb/migrations/*.mako",
    "waiverdb/migrations/*.py",
    "waiverdb/migrations/README",
    "waiverdb/migrations/versions",
    "waiverdb/static/*",
    "waiverdb/templates/*.html",
]

requires-python = ">=3.8,<3.13"

dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = [
  "pytest==8.0.0",
  "pytest-cov==4.0.0",
  "mock==5.1.0",
]

docs = [
  "sphinx==7.1.1",
  "sphinxcontrib-httpdomain==1.8.1",
  "markupsafe==2.1.5",
]

[project.scripts]
waiverdb-cli = "waiverdb.cli:cli"
waiverdb = "waiverdb.manage:cli"

[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "waiverdb/__version__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
