[metadata]
name = waiverdb-messages
version = 1.0.0
description = A schema package for messages sent by waiverdb
long_description = file: README.md
url = https://github.com/release-engineering/waiverdb
maintainer = WaiverDB developers
maintainer_email = greenwave-dev@example.com
keywords = fedora
platforms = Fedora, GNU/Linux
license = GPLv2+
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  fedora_messaging

[options.entry_points]
fedora.messages =
    org.fedoraproject.dev.waiverdb.waiver.new=waiverdb_messages.waiverdb_message:WaiverDBMessageV1



[bdist_wheel]
universal = 1

[flake8]
show-source = True
max-line-length = 100
exclude = .git,.tox,dist,*egg,build,venv,.venv
ignore = E203,W503

[tool:pytest]
testpaths = waiverdb_messages/tests/

[coverage:run]
branch = True
source = waiverdb_messages

[coverage:paths]
source =
   waiverdb_messages
   .tox/*/site-packages/waiverdb_messages

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
omit =
    waiverdb_messages/tests/*
